# terraform_vertexai_feature_store

./: .gitignore  LICENSE  README.md  delete_project.sh  pyproject.toml  sample_feature_request.sh  serving.ipynb  setup.sh  setup_project.sh
bigquery/: movie_schema.json  movie_template.json  movie_view.sql  movie_with_embedding_schema.json  movie_with_embedding_view.sql  rating_schema.json  user_rating_view.sql  user_rating_view_latest.sql  user_schema.json  user_view.sql
data/: movie_with_embedding.parquet  rating.parquet  user.parquet
infra/: .terraform.lock.hcl  main.tf  provider.tf  terraform.tfvars  variables.tf
