[tool.poetry]
name = "terraform-vertexai-feature-store"
version = "0.1.0"
description = ""
authors = ["Erik Grip <erik.grip@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^15.0.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"
ipykernel = "^6.29.2"
google-cloud-aiplatform = "^1.41.0"
google-cloud-bigquery = "^3.17.2"
db-dtypes = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
