[tool.poetry]
name = "terraform-vertexai-feature-store"
version = "0.1.0"
description = ""
authors = ["Erik Grip <erik.grip@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
google-cloud-aiplatform = "^1.41.0"
ipykernel = "^6.29.2"
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
